--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ h1{
 }
 
 /* Style inputs */
-input[type=text], select, textarea ,input[type=password]{
+input[type=text], select, textarea ,input[type=password],input[type=number],input[type=date]{
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
@@ -138,10 +138,6 @@ input[type=submit]:hover {
 }
 
 #lname{
-  padding-left: 20px;
-}
-
-#country{
   padding-left: 20px;
 }
 
